[metadata]
name = stan_py_example
version = 0.0.1
author=Brian Ward
author_email=bward@flatironinstitute.org
description=An example of the cookiecutter-cmdstan-wrapper
long_description = file: README.md
license=MIT license
url = https://github.com/WardBrian/stan_py_example

[options]
packages = find:
include_package_data = True
requires-python = >=3.7

install_requires =
    cmdstanpy>=1.0.4

[options.package_data]
* =
    *.stan

[options.extras_require]
test =
    flake8
    pytest
    mypy
    isort
    black
